flux-tests/tests/neg/error_messages/annot_check/method.rs
struct S<T> {
    x: T,
}

impl<T> S<T> {
    #[flux::sig(fn(&S))] //~ ERROR this struct must take 1 generic argument
    fn test(&self) {}
}
